# properties

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: Cargo.toml  README.md  load.rs  load_file.rs  store.rs  store_comment.rs  store_escape.rs  store_file.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_comment.rs  fuzz_load.rs  fuzz_store.rs
src/: lib.rs  reader.rs  writer.rs
src/properties/: mod.rs  reader.rs  writer.rs
